--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,12 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/noa/frame0000.png.meta
+Assets/noa/frame0001.png.meta
+Assets/noa/frame0002.png.meta
+Assets/noa/frame0003.png.meta
+Assets/noa/frame0004.png.meta
+Assets/noa/frame0005.png.meta
+Assets/noa/frame0006.png.meta
+Assets/noa/soda_stream.png.meta
+Assets/noa/frame0000.png.meta
